Modify token handling
Save access token in memory
Save refresh token in http only cookie
Enable cookies in a cors environment (must communicate over https to work)

--- a/src/style.scss
+++ b/src/style.scss
@@ -21,6 +21,8 @@ $primary: #ffc908;
   transition: 200ms ease;
   &:hover{
     opacity: .8;
+    cursor: pointer;
+    box-shadow: inset 0 0 0 1px rgba($color: black, $alpha: 1);
   }
 }
 .btn-primary {
@@ -70,7 +72,12 @@ th,
 td {
   padding: 15px;
 }
-
+tr{
+  height: 100px;
+}
+td img{
+  height: 50px;
+}
 /* Style for the header cells */
 th {
   background-color: #4caf50;
