Add: ImageEdit upload multiple files

--- a/src/components/admin/Table.scss
+++ b/src/components/admin/Table.scss
@@ -24,6 +24,9 @@ table {
         pointer-events: none;
         color: #8f8f8f;
       }
+      & > * {
+        cursor: pointer;
+      }
     }
   }
   thead {
@@ -44,37 +47,6 @@ table {
         z-index: 1;
         background-color: #ccc;
         box-shadow: 0 0 5px 1px rgba($color: #000000, $alpha: 0.8);
-        cursor: pointer;
-      }
-    }
-  }
-}
-
-.images {
-  display: flex;
-  min-width: 300px;
-  justify-content: center;
-  img {
-    width: 50px;
-    height: 50px;
-    background-color: white;
-    background-color: white;
-    border: 1px solid black;
-    margin-right: -25px;
-    transition: 100ms;
-  }
-  @for $i from 1 through 10 {
-    img:nth-child(#{$i}) {
-      z-index: #{10 - $i};
-    }
-  }
-
-  &:hover {
-    img {
-      margin: 0;
-      transition: 100ms;
-      &:hover {
-        filter: blur(2px);
       }
     }
   }
